# diff-gaussian-rasterization

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  notes.txt  pyproject.toml  requirements.txt  run_sample.py  setup.py  softshrink.py
metal_rasterizer/: auxiliary.h  auxiliary.metal  config.h  forward.metal  metal_ext.mm  rasterize_points.h  rasterize_points.mm
metal_rasterizer/diff_gaussian_renderer_metal/: diff_gaussian_renderer_metal.metal
metal_rasterizer/diff_gaussian_renderer_metal.xcodeproj/: project.pbxproj
metal_rasterizer/diff_gaussian_renderer_metal.xcodeproj/project.xcworkspace/xcuserdata/prashanthsadasivan.xcuserdatad/: UserInterfaceState.xcuserstate
metal_rasterizer/diff_gaussian_renderer_metal.xcodeproj/xcuserdata/prashanthsadasivan.xcuserdatad/xcschemes/: xcschememanagement.plist
