[tool.poetry]
name = "diff-gaussian-rasterization"
version = "0.1.0"
description = ""
authors = ["Prashanth Sadasivan <prashanthsadasivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plyfile = "^1.0.1"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
